feat:逃逸分析和集合基本原理demo